--- a/projekt/app.json
+++ b/projekt/app.json
@@ -1,15 +1,15 @@
 {
   "expo": {
-    "name": "Projekt skaner",
+    "name": "FotoKalorie",
     "slug": "snack-9a254a37-2b0b-4bda-bb32-ab6d210af736",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/skaner.png",
+    "icon": "./assets/app_photo.png",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
     "splash": {
-      "image": "./assets/skaner.png",
-      "resizeMode": "contain",
+      "image": "./assets/app_photo.png",
+      "resizeMode": "cover",
       "backgroundColor": "#ffffff"
     },
     "ios": {
@@ -18,7 +18,7 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/skaner.png",
+        "foregroundImage": "./assets/app_photo.png",
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true,
@@ -30,7 +30,7 @@
       "package": "com.matbartczak.snack9a254a372b0b4bdabb32ab6d210af736"
     },
     "web": {
-      "favicon": "./assets/skaner.png"
+      "favicon": "./assets/app_photo.png"
     },
     "plugins": [
       [
